apps/immich/immich/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
  namespace: immich
  annotations:
    cloudflare-operator.io/content: ${BASE_DOMAIN}
    cloudflare-operator.io/proxied: "false"
    cloudflare-operator.io/ttl: "1"
    cloudflare-operator.io/type: CNAME
spec:
  parentRefs:
    - name: external
      namespace: envoy-gateway-system
      sectionName: external-https
    - name: internal
      namespace: envoy-gateway-system
      sectionName: internal-https
  hostnames:
    - pics.${BASE_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: immich-server
          port: 2283
